test/visibility/import/unqualified-access-no-qualified2.good
unqualified-access-no-qualified2.chpl:7: In function 'main':
unqualified-access-no-qualified2.chpl:10: error: 'M' undeclared (first use this function)
